Bug 546220: Only use Tabs for indentation
This change only contains whitespace changes performed by the
JDT formatter. No manual changes are contained.

Change-Id: Iaca17909713341fc945eb180cc733b66211e1a13
Signed-off-by: Matthias Becker <ma.becker@sap.com>